--- a/category.html
+++ b/category.html
@@ -4,38 +4,188 @@
 <meta charset="UTF-8">
 <title>Category Products</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
+
 <style>
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
-.main{padding:20px;max-width:900px;margin:auto}
-.header{margin-top:15px;background:#fff;padding:15px;border-radius:12px;text-align:center;box-shadow:0 5px 15px rgba(0,0,0,.1)}
-.back-btn{background:#2563eb;color:#fff;border:none;padding:8px 12px;border-radius:8px;cursor:pointer;margin-top:10px}
-.products-grid{display:grid;grid-template-columns:repeat(auto-fill,minmax(140px,1fr));gap:12px;margin-top:20px}
-.product-card{background:#fff;padding:10px;border-radius:12px;text-align:center;cursor:pointer;box-shadow:0 4px 12px rgba(0,0,0,.08);transition:.2s;display:flex;flex-direction:column;justify-content:space-between}
-.product-card:hover{transform:translateY(-4px)}
-.product-card img{width:100%;height:100px;object-fit:cover;border-radius:8px}
-.product-card h4{font-size:14px;margin:6px 0;color:#111;font-weight:500}
-.price{color:#2563eb;font-weight:600;font-size:13px;margin-bottom:6px}
-.product-actions{display:flex;justify-content:center;gap:6px;margin-top:6px}
-button.success{background:#16a34a;color:#fff;border:none;padding:6px 10px;border-radius:8px;cursor:pointer;font-size:12px}
-button.delete{background:#dc2626;color:#fff;border:none;padding:6px 10px;border-radius:8px;cursor:pointer;font-size:12px}
-.modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;z-index:20}
-.modal-content{background:#fff;padding:20px;width:90%;max-width:500px;border-radius:15px;max-height:85vh;overflow:auto}
-.slider{display:flex;overflow-x:auto;scroll-snap-type:x mandatory;gap:10px;margin-top:10px}
-.slider img{width:100%;border-radius:10px;scroll-snap-align:center;flex-shrink:0}
-.dots{display:flex;justify-content:center;gap:6px;margin:8px 0}
-.dot{width:8px;height:8px;border-radius:50%;background:#cbd5e1}
-.dot.active{background:#2563eb}
+
+.main{
+  padding:16px;
+  max-width:900px;
+  margin:auto;
+}
+
+.header{
+  background:#fff;
+  padding:14px;
+  border-radius:14px;
+  text-align:center;
+  box-shadow:0 5px 15px rgba(0,0,0,.1);
+}
+
+.back-btn{
+  background:#2563eb;
+  color:#fff;
+  border:none;
+  padding:7px 14px;
+  border-radius:8px;
+  cursor:pointer;
+  margin-top:8px;
+  font-size:13px;
+}
+
+/* 🔥 FIXED 3 PRODUCTS PER ROW */
+.products-grid{
+  display:grid;
+  grid-template-columns:repeat(3,1fr);
+  gap:12px;
+  margin-top:18px;
+}
+
+/* 🔥 PRODUCT CARD */
+.product-card{
+  background:#fff;
+  border-radius:14px;
+  padding:10px;
+  text-align:center;
+  cursor:pointer;
+  box-shadow:0 4px 12px rgba(0,0,0,.08);
+  transition:.2s;
+  display:flex;
+  flex-direction:column;
+}
+
+.product-card:hover{
+  transform:translateY(-4px);
+}
+
+/* 🔥 IMAGE PERFECT FIT */
+.product-card img{
+  width:100%;
+  height:110px;
+  object-fit:contain;
+  background:#f8fafc;
+  border-radius:10px;
+}
+
+/* 🔥 TEXT */
+.product-card h4{
+  font-size:13px;
+  margin:6px 0 2px;
+  color:#111;
+  font-weight:500;
+  line-height:1.2;
+}
+
+.price{
+  color:#16a34a;
+  font-weight:600;
+  font-size:13px;
+  margin-bottom:6px;
+}
+
+/* 🔥 ACTION BUTTONS */
+.product-actions{
+  display:flex;
+  gap:6px;
+  justify-content:center;
+}
+
+button.success{
+  background:#22c55e;
+  color:#fff;
+  border:none;
+  padding:5px 8px;
+  border-radius:8px;
+  font-size:11px;
+  cursor:pointer;
+}
+
+button.delete{
+  background:#ef4444;
+  color:#fff;
+  border:none;
+  padding:5px 8px;
+  border-radius:8px;
+  font-size:11px;
+  cursor:pointer;
+}
+
+/* MODAL */
+.modal{
+  position:fixed;
+  inset:0;
+  background:rgba(0,0,0,.5);
+  display:none;
+  align-items:center;
+  justify-content:center;
+  z-index:20;
+}
+
+.modal-content{
+  background:#fff;
+  padding:18px;
+  width:90%;
+  max-width:500px;
+  border-radius:16px;
+  max-height:85vh;
+  overflow:auto;
+}
+
+/* SLIDER */
+.slider{
+  display:flex;
+  overflow-x:auto;
+  scroll-snap-type:x mandatory;
+  gap:10px;
+  margin-top:10px;
+}
+
+.slider img{
+  width:100%;
+  border-radius:10px;
+  scroll-snap-align:center;
+  flex-shrink:0;
+}
+
+.dots{
+  display:flex;
+  justify-content:center;
+  gap:6px;
+  margin:8px 0;
+}
+
+.dot{
+  width:8px;
+  height:8px;
+  border-radius:50%;
+  background:#cbd5e1;
+}
+
+.dot.active{
+  background:#2563eb;
+}
+
+/* 🔥 FORCE 3 EVEN ON SMALL MOBILE */
+@media(max-width:480px){
+  .products-grid{
+    grid-template-columns:repeat(3,1fr);
+  }
+}
 </style>
 </head>
+
 <body>
+
 <div class="main">
   <div class="header">
     <h3 id="catTitle">Category</h3>
     <button class="back-btn" onclick="goBack()">⬅ Back</button>
   </div>
+
   <div id="products" class="products-grid"></div>
 </div>
 
@@ -60,11 +210,10 @@ button.delete{background:#dc2626;color:#fff;border:none;padding:6px 10px;border-
     <textarea id="edit_detail" placeholder="Detail"></textarea>
     <input type="file" id="edit_images" multiple>
     <div id="edit_images_preview" style="display:flex;gap:6px;flex-wrap:wrap"></div>
-    <button class="primary" onclick="updateProduct()">Update</button>
+    <button onclick="updateProduct()">Update</button>
     <button onclick="closeAll()">Cancel</button>
   </div>
 </div>
-
 <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
 <script>
 const API="https://shopbacked-vmhs.onrender.com";
