--- a/category.html
+++ b/category.html
@@ -73,45 +73,28 @@ body{margin:0;background:#f3f6fb}
 
 /* 🔥 TEXT */
 .product-card h4{
-  font-size:13px;
-  margin:6px 0 2px;
-  color:#111;
-  font-weight:500;
+  font-size:12px;
+  margin:4px 0 2px;
   line-height:1.2;
 }
 
 .price{
-  color:#16a34a;
-  font-weight:600;
-  font-size:13px;
-  margin-bottom:6px;
+  font-size:12px;
+  margin-bottom:4px;
 }
+
+
 
 /* 🔥 ACTION BUTTONS */
 .product-actions{
-  display:flex;
-  gap:6px;
-  justify-content:center;
+  gap:4px;
 }
 
-button.success{
-  background:#22c55e;
-  color:#fff;
-  border:none;
-  padding:5px 8px;
-  border-radius:8px;
-  font-size:11px;
-  cursor:pointer;
-}
-
+button.success,
 button.delete{
-  background:#ef4444;
-  color:#fff;
-  border:none;
-  padding:5px 8px;
-  border-radius:8px;
-  font-size:11px;
-  cursor:pointer;
+  padding:4px 6px;
+  font-size:10px;
+  border-radius:6px;
 }
 
 /* MODAL */
