--- a/wholesaler.html
+++ b/wholesaler.html
@@ -50,32 +50,39 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
 }
 .category-grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(140px,1fr));
-  gap:14px;
+  grid-template-columns:repeat(auto-fill,minmax(180px,1fr));
+  gap:20px;
+  margin-top:25px;
 }
 
 .category-card{
-  background:#fff;
-  border-radius:14px;
-  padding:18px;
+  background:linear-gradient(135deg,#2563eb,#1e40af);
+  border-radius:20px;
+  padding:30px 20px;
   text-align:center;
   cursor:pointer;
-  box-shadow:0 4px 10px rgba(0,0,0,.08);
-  transition:.2s;
+  box-shadow:0 10px 25px rgba(0,0,0,.2);
+  transition:.25s;
+  color:#fff;
 }
 
 .category-card:hover{
-  transform:translateY(-4px);
+  transform:translateY(-6px) scale(1.03);
+  box-shadow:0 15px 35px rgba(0,0,0,.3);
 }
 
 .category-card i{
-  font-size:28px;
-  color:#2563eb;
+  font-size:48px;
+  margin-bottom:12px;
+  display:block;
+  color:#e0e7ff;
 }
 
 .category-card h4{
-  margin-top:8px;
-  font-size:15px;
+  margin:0;
+  font-size:20px;
+  font-weight:600;
+  letter-spacing:.5px;
 }
  
 </style>  </head>  <body>    
