--- a/wholesaler.html
+++ b/wholesaler.html
@@ -50,39 +50,39 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
 }
 .category-grid{
   display:grid;
-  grid-template-columns:repeat(auto-fill,minmax(180px,1fr));
-  gap:20px;
-  margin-top:25px;
+  grid-template-columns:repeat(2, 1fr); /* 🔥 1 row me 2 */
+  gap:16px;                              /* proper gap */
+  margin:20px auto;
+  max-width:420px;                       /* popup ke size ke barabar */
 }
 
 .category-card{
   background:linear-gradient(135deg,#2563eb,#1e40af);
-  border-radius:20px;
-  padding:30px 20px;
+  border-radius:14px;
+  padding:18px 12px;                     /* chhota size */
   text-align:center;
   cursor:pointer;
-  box-shadow:0 10px 25px rgba(0,0,0,.2);
-  transition:.25s;
+  box-shadow:0 5px 14px rgba(0,0,0,.18);
+  transition:.2s ease;
   color:#fff;
 }
 
 .category-card:hover{
-  transform:translateY(-6px) scale(1.03);
-  box-shadow:0 15px 35px rgba(0,0,0,.3);
+  transform:translateY(-3px);
+  box-shadow:0 8px 18px rgba(0,0,0,.25);
 }
 
 .category-card i{
-  font-size:48px;
-  margin-bottom:12px;
+  font-size:30px;                        /* small icon */
+  margin-bottom:6px;
   display:block;
   color:#e0e7ff;
 }
 
 .category-card h4{
   margin:0;
-  font-size:20px;
+  font-size:15px;                        /* small text */
   font-weight:600;
-  letter-spacing:.5px;
 }
  
 </style>  </head>  <body>    
