--- a/wholesaler.html
+++ b/wholesaler.html
@@ -48,41 +48,45 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
 .dot.active{
   background:#2563eb;
 }
+/* CATEGORY GRID */
 .category-grid{
   display:grid;
-  grid-template-columns:repeat(2, 1fr); /* 🔥 1 row me 2 */
-  gap:16px;                              /* proper gap */
+  grid-template-columns:1fr 1fr; /* 🔥 2 per row */
+  gap:18px 18px;                 /* row & column gap */
   margin:20px auto;
-  max-width:420px;                       /* popup ke size ke barabar */
+  max-width:460px;               /* dashboard width */
+  padding:5px;
 }
 
+/* CATEGORY CARD */
 .category-card{
-  background:linear-gradient(135deg,#2563eb,#1e40af);
+  background:#ffffff;
   border-radius:14px;
-  padding:18px 12px;                     /* chhota size */
+  padding:18px 10px;
   text-align:center;
   cursor:pointer;
-  box-shadow:0 5px 14px rgba(0,0,0,.18);
-  transition:.2s ease;
-  color:#fff;
+  box-shadow:0 4px 12px rgba(0,0,0,.12);
+  transition:0.2s ease;
 }
 
 .category-card:hover{
   transform:translateY(-3px);
-  box-shadow:0 8px 18px rgba(0,0,0,.25);
 }
 
+/* ICON */
 .category-card i{
-  font-size:30px;                        /* small icon */
-  margin-bottom:6px;
+  font-size:26px;
+  color:#2563eb;
   display:block;
-  color:#e0e7ff;
+  margin-bottom:6px;
 }
 
+/* TEXT */
 .category-card h4{
+  font-size:14px;
   margin:0;
-  font-size:15px;                        /* small text */
   font-weight:600;
+  color:#0f172a;
 }
  
 </style>  </head>  <body>    
