--- a/wholesaler.html
+++ b/wholesaler.html
@@ -93,7 +93,7 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   </div>    <div class="header">    
     <h3>Wholesaler Dashboard</h3>    
     <small>ID: <b id="widText"></b></small>    
-  </div>    <div id="categories"></div>    
+  </div>    <div id="categories" class="category-grid"></div>    
 </div>  <!-- PROFILE -->  <div class="modal" id="profileModal">    
  <div class="modal-content">    
   <h3>Shop Profile</h3>    
@@ -153,7 +153,7 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
     <button onclick="closeAll()">Cancel</button>
   </div>
 </div>
- <div id="categories" class="category-grid"></div>
+ 
  <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>  <script>    
 const API="https://shopbacked-vmhs.onrender.com";    
 const TOKEN=localStorage.getItem("token");    
