--- a/wholesaler.html
+++ b/wholesaler.html
@@ -103,17 +103,25 @@ button.success{background:#16a34a;color:#fff;border:none;padding:8px 12px;border
   <button class="primary" onclick="saveWholesalerProfileToServer()">Save</button>    
   <button onclick="closeAll()">Cancel</button>    
  </div>    
-</div>  <!-- PRODUCT -->  <div class="modal" id="productModal">    
- <div class="modal-content">    
-  <h3>Add Product</h3>    
-  <input id="pname" placeholder="Product Name">
-  <input id="pcategory" placeholder="Enter Category (eg: Grocery, Mobile)">
-  <input id="pprice" type="number" placeholder="Price">    
-  <textarea id="pdetail" placeholder="Detail"></textarea>    
-  <input id="pimg" type="file" accept="image/*" multiple>    
-  <button class="primary" onclick="addProduct()">Save</button>    
-  <button onclick="closeAll()">Cancel</button>    
- </div>    
+</div>  <!-- PRODUCT -->  <!-- PRODUCT MODAL -->
+<div class="modal" id="productModal">
+  <div class="modal-content">
+    <h3>Add Product</h3>
+    <input id="pname" placeholder="Product Name">
+
+    <!-- Category selection -->
+    <select id="pcategorySelect">
+      <option value="">Select Existing Category</option>
+    </select>
+    <input id="pcategoryNew" placeholder="Or Enter New Category">
+
+    <input id="pprice" type="number" placeholder="Price">
+    <textarea id="pdetail" placeholder="Detail"></textarea>
+    <input id="pimg" type="file" accept="image/*" multiple>
+
+    <button class="primary" onclick="addProduct()">Save</button>
+    <button onclick="closeAll()">Cancel</button>
+  </div>
 </div>  <!-- ORDERS -->  <div class="modal" id="orderModal">    
  <div class="modal-content">    
   <h3>Orders</h3>    
