--- a/retailer.html
+++ b/retailer.html
@@ -169,8 +169,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
     <input id="wid" placeholder="Enter Wholesaler ID">
     <button class="primary" onclick="loadProducts()">Search</button>
   </div>
-
-  <div class="products-grid" id="products"></div>
+<div class="products-grid" id="categories"></div>
 </div>
 
 <!-- PRODUCT DETAIL -->
