--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -7,8 +7,8 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 <script src="https://checkout.razorpay.com/v1/checkout.js"></script>
+
 <style>
-/* COPY DASHBOARD STYLES */
 *{box-sizing:border-box;font-family:Poppins,sans-serif}
 body{margin:0;background:#f3f6fb}
 .main{padding:20px}
@@ -22,230 +22,177 @@ body{margin:0;background:#f3f6fb}
 .cart-btn{background:#e5fbe9}
 .buy-btn{background:#fee2e2}
 
-/* MODAL STYLES COPY DASHBOARD */
-.modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;z-index:20}
+.modal{position:fixed;inset:0;background:rgba(0,0,0,.5);display:none;align-items:center;justify-content:center;z-index:50}
 .modal-content{background:#fff;padding:20px;width:90%;max-width:500px;border-radius:15px;max-height:85vh;overflow:auto}
-/* SLIDER */
+
 .slider{display:flex;overflow-x:auto;scroll-snap-type:x mandatory}
-.slider img{min-width:100%;height:200px;object-fit:cover;scroll-snap-align:center;border-radius:10px;flex-shrink:0}
+.slider img{min-width:100%;height:200px;object-fit:contain;scroll-snap-align:center;border-radius:10px}
 .dots{display:flex;justify-content:center;gap:6px;margin:8px 0}
 .dot{width:8px;height:8px;border-radius:50%;background:#cbd5e1}
 .dot.active{background:#16a34a}
-.desc{font-size:14px;line-height:1.5;color:#333}
+
 .desc.short{-webkit-line-clamp:3;display:-webkit-box;-webkit-box-orient:vertical;overflow:hidden}
-.desc-toggle{display:inline-block;color:#2563eb;font-size:13px;cursor:pointer;margin-top:4px;user-select:none}
-.price-box{margin:8px 0;padding:8px 12px;background:linear-gradient(135deg,#f0fdf4,#ecfeff);border:1px solid #bbf7d0;border-radius:10px}
-.price-row{display:flex;align-items:center;gap:2px;margin-top:2px}
-.price-row i{font-size:16px;color:#16a34a}
+.desc-toggle{color:#2563eb;font-size:13px;cursor:pointer}
 .price-value{font-size:20px;font-weight:700;color:#14532d}
 </style>
 </head>
+
 <body>
 
 <div class="main">
-  <div class="header"><h3 id="catTitle">Category Products</h3></div>
+  <div class="header">
+    <h3 id="catTitle">Category Products</h3>
+  </div>
   <div class="products-grid" id="products"></div>
 </div>
 
-<!-- COPY DASHBOARD MODALS -->
-<!-- PRODUCT DETAIL -->
+<!-- PRODUCT DETAIL MODAL -->
 <div class="modal" id="detailModal">
   <div class="modal-content">
     <h3 id="dName"></h3>
+
     <div class="slider" id="dImages"></div>
     <div class="dots" id="dDots"></div>
+
     <p id="dDesc" class="desc short"></p>
     <span id="descToggle" class="desc-toggle" onclick="toggleDesc()">More ⬇</span>
-    <div class="price-box">
-      <div class="price-row">
-        <span id="dPrice" class="price-value">0</span>
-      </div>
-    </div>
+
+    <div class="price-value" id="dPrice"></div>
+
     <select id="vehicleType">
       <option value="">Select Vehicle</option>
       <option value="two_wheeler">Two Wheeler</option>
       <option value="three_wheeler">Three Wheeler</option>
       <option value="four_wheeler">Four Wheeler</option>
     </select>
+
+    <br><br>
     <button class="buy-btn" onclick="directBuy(event)">⚡ Buy Now</button>
-    <button onclick="closeAll()">Close</button>
+    <button onclick="closeAll()">❌ Close</button>
   </div>
 </div>
 
-<!-- FULL IMAGE -->
+<!-- IMAGE MODAL -->
 <div class="modal" id="imageModal">
-  <div class="modal-content" style="padding:10px;background:#000">
-    <img id="fullImg" style="width:100%;height:auto;border-radius:10px">
-    <button onclick="closeImage()" style="margin-top:10px;background:#fff;border:none;padding:8px 14px;border-radius:8px">❌ Close</button>
+  <div class="modal-content" style="background:#000">
+    <img id="fullImg" style="width:100%">
+    <button onclick="closeAll()" style="margin-top:10px">Close</button>
   </div>
 </div>
 
 <script>
 const API = "https://shopbacked-vmhs.onrender.com";
 
-// Get params
-// Get params
-const params = new URLSearchParams(window.location.search);
+// URL params
+const params = new URLSearchParams(location.search);
 const wid = params.get("wid");
 const category = params.get("category");
 
 document.getElementById("catTitle").innerText = category || "Category Products";
 
-// ------------------- PRODUCTS -------------------
+// ---------------- PRODUCTS ----------------
 async function loadProducts(){
   try{
     const res = await fetch(`${API}/api/products/wholesaler/${wid}`);
     const data = await res.json();
-    const productsList = data.products.filter(p => (p.category || "Other") === category);
 
+    const list = data.products.filter(p => (p.category||"Other") === category);
     const container = document.getElementById("products");
-    container.innerHTML = productsList.map(p=>{
+
+    if(!list.length){
+      container.innerHTML = "<p>No products found</p>";
+      return;
+    }
+
+    container.innerHTML = list.map(p=>{
       const pdata = encodeURIComponent(JSON.stringify(p));
       return `
-      <div class="product-card">
-        <img src="${p.images?.[0] || ''}">
-        <div>${p.productName}</div>
-        <div class="price">₹${p.price}</div>
-        <div class="actions">
-          <button class="cart-btn" onclick='addToCart(JSON.parse(decodeURIComponent("${pdata}")))'>🛒</button>
-          <button class="buy-btn" onclick='openDetail(JSON.parse(decodeURIComponent("${pdata}")))'>⚡</button>
+        <div class="product-card">
+          <img src="${p.images?.[0]||''}">
+          <div>${p.productName}</div>
+          <div class="price">₹${p.price}</div>
+          <div class="actions">
+            <button class="cart-btn" onclick='addToCart(JSON.parse(decodeURIComponent("${pdata}")))'>🛒</button>
+            <button class="buy-btn" onclick='openDetail(JSON.parse(decodeURIComponent("${pdata}")))'>⚡</button>
+          </div>
         </div>
-      </div>`;
+      `;
     }).join("");
-  }catch(e){ alert("Products load failed"); console.error(e); }
+  }catch(e){
+    alert("Failed to load products");
+    console.error(e);
+  }
 }
 
-// ------------------- COPY FUNCTIONS FROM DASHBOARD -------------------
+// ---------------- DETAIL ----------------
 let selectedProduct = null;
 
-const dImages = document.getElementById("dImages");
-const dDots   = document.getElementById("dDots");
-const detailModal = document.getElementById("detailModal");
-const dName = document.getElementById("dName");
-const dDesc = document.getElementById("dDesc");
-const dPrice = document.getElementById("dPrice");
-const dTotal = document.getElementById("dTotal");
-const vehicleType = document.getElementById("vehicleType");
-
-// --- PRODUCT DETAIL ---
 function openDetail(p){
   selectedProduct = p;
-  dName.innerText  = p.productName || "";
-  dPrice.innerText = "Price ₹" + (p.price || 0);
-  dDesc.innerText  = p.detail || "No description";
-  dDesc.classList.add("short");
-  document.getElementById("descToggle").innerText = "More ⬇";
+  document.getElementById("dName").innerText = p.productName;
+  document.getElementById("dPrice").innerText = "₹" + p.price;
+  document.getElementById("dDesc").innerText = p.detail || "No description";
 
-  // images
-  dImages.innerHTML = "";
-  dDots.innerHTML   = "";
-  const images = (p.images && p.images.length) ? p.images : (p.image?[p.image]:[]);
-  images.forEach((img,i)=>{
-    dImages.innerHTML += `<img src="${img}" onclick="openImage('${img}')" style="min-width:100%;object-fit:contain;cursor:zoom-in">`;
-    dDots.innerHTML += `<div class="dot ${i===0?"active":""}"></div>`;
+  const imgBox = document.getElementById("dImages");
+  const dots = document.getElementById("dDots");
+  imgBox.innerHTML = "";
+  dots.innerHTML = "";
+
+  (p.images||[]).forEach((img,i)=>{
+    imgBox.innerHTML += `<img src="${img}" onclick="openImage('${img}')">`;
+    dots.innerHTML += `<div class="dot ${i==0?'active':''}"></div>`;
   });
 
-  dImages.onscroll = ()=>{
-    const index = Math.round(dImages.scrollLeft/dImages.clientWidth);
-    [...dDots.children].forEach((dot,i)=>dot.classList.toggle("active",i===index));
-  }
+  document.getElementById("detailModal").style.display="flex";
+}
 
-  detailModal.style.display="flex";
+function toggleDesc(){
+  document.getElementById("dDesc").classList.toggle("short");
 }
 
 function openImage(src){
   document.getElementById("fullImg").src = src;
   document.getElementById("imageModal").style.display="flex";
 }
-function closeImage(){document.getElementById("imageModal").style.display="none";}
-function toggleDesc(){dDesc.classList.toggle("short"); document.getElementById("descToggle").innerText = dDesc.classList.contains("short")?"More ⬇":"Less ⬆";}
 
-// CART
-let cart = JSON.parse(localStorage.getItem("cart")||"[]");
-function addToCart(p){
-  const already = cart.find(item=>item._id===p._id);
-  if(already){ alert("Already in cart"); return; }
-  cart.push(p);
-  localStorage.setItem("cart",JSON.stringify(cart));
-  alert("Added to cart ✅ "+p.productName);
+function closeAll(){
+  document.getElementById("detailModal").style.display="none";
+  document.getElementById("imageModal").style.display="none";
+  selectedProduct = null;
 }
 
-// BUY DIRECT (simplified)
-async function directBuy(e) {
+// ---------------- CART ----------------
+let cart = JSON.parse(localStorage.getItem("cart")||"[]");
+
+function addToCart(p){
+  if(cart.find(i=>i._id===p._id)){
+    alert("Already in cart");
+    return;
+  }
+  cart.push(p);
+  localStorage.setItem("cart",JSON.stringify(cart));
+  alert("Added to cart ✅");
+}
+
+// ---------------- DELIVERY ----------------
+function deliveryChargeByVehicle(v){
+  if(v==="two_wheeler") return 30;
+  if(v==="three_wheeler") return 50;
+  if(v==="four_wheeler") return 80;
+  return 0;
+}
+
+// ---------------- DIRECT BUY ----------------
+async function directBuy(e){
   e.preventDefault();
 
-  if (!vehicleType.value) {
-    alert("🚚 Select vehicle first");
-    return;
-  }
+  if(!selectedProduct){ alert("No product"); return; }
+  const vehicle = document.getElementById("vehicleType").value;
+  if(!vehicle){ alert("Select vehicle"); return; }
 
-  const retailerProfile = JSON.parse(
-    localStorage.getItem("retailerProfile") || "{}"
-  );
+  alert("✅ Direct Buy Flow OK\n(Product + Payment)");
 
-  if (!retailerProfile.mobile) {
-    alert("👤 Please save profile first");
-    return;
-  }
-
-  const delivery = deliveryChargeByVehicle(vehicleType.value);
-  const total = selectedProduct.price + delivery;
-
-  const res = await fetch(`${API}/api/orders/pay-and-create`, {
-    method: "POST",
-    headers: { "Content-Type": "application/json" },
-    body: JSON.stringify({
-      amount: total,
-      notes: {
-        type: "direct", // ✅🔥 MOST IMPORTANT
-
-        productId: selectedProduct._id,
-        productName: selectedProduct.productName,
-        price: selectedProduct.price,
-
-        wholesalerId: selectedProduct.wholesalerId,
-        wholesalerName: selectedProduct.shopName,
-        wholesalerMobile: selectedProduct.mobile,
-        wholesalerAddress: selectedProduct.address,
-
-        retailerName: retailerProfile.name,
-        retailerMobile: retailerProfile.mobile,
-        retailerAddress: retailerProfile.address,
-
-        vehicleType: vehicleType.value,
-        deliveryCharge: delivery
-      }
-    })
-  });
-
-  const data = await res.json();
-  if (!data.success) {
-    alert("❌ Order create failed");
-    return;
-  }
-
-  const rzp = new Razorpay({
-    key: data.key,
-    amount: data.amount,
-    currency: "INR",
-    order_id: data.order.id,
-
-    handler: function () {
-      alert("✅ Payment Successful 🎉");
-      alert("📦 Order processing ho raha hai");
-
-      closeAll();
-      setTimeout(openOrderStatus, 3000);
-    },
-
-    modal: {
-      ondismiss: function () {
-        alert("❌ Payment cancelled");
-      }
-    }
-  });
-
-  rzp.open();
+  closeAll();
 }
 
 loadProducts();
