--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -186,15 +186,88 @@ function deliveryChargeByVehicle(v){
 async function directBuy(e){
   e.preventDefault();
 
-  if(!selectedProduct){ alert("No product"); return; }
-  const vehicle = document.getElementById("vehicleType").value;
-  if(!vehicle){ alert("Select vehicle"); return; }
+  if(!selectedProduct){
+    alert("Product not selected");
+    return;
+  }
 
-  alert("✅ Direct Buy Flow OK\n(Product + Payment)");
+  const vehicle = vehicleType.value;
+  if(!vehicle){
+    alert("🚚 Select vehicle first");
+    return;
+  }
 
-  closeAll();
+  const retailerProfile = JSON.parse(
+    localStorage.getItem("retailerProfile") || "{}"
+  );
+
+  if(!retailerProfile.mobile){
+    alert("👤 Please save retailer profile first");
+    return;
+  }
+
+  const delivery = deliveryChargeByVehicle(vehicle);
+  const total = selectedProduct.price + delivery;
+
+  try{
+    const res = await fetch(`${API}/api/orders/pay-and-create`,{
+      method:"POST",
+      headers:{ "Content-Type":"application/json" },
+      body: JSON.stringify({
+        amount: total,
+        notes:{
+          type:"direct",
+
+          productId: selectedProduct._id,
+          productName: selectedProduct.productName,
+          price: selectedProduct.price,
+
+          wholesalerId: selectedProduct.wholesalerId,
+          wholesalerName: selectedProduct.shopName,
+          wholesalerMobile: selectedProduct.mobile,
+          wholesalerAddress: selectedProduct.address,
+
+          retailerName: retailerProfile.name,
+          retailerMobile: retailerProfile.mobile,
+          retailerAddress: retailerProfile.address,
+
+          vehicleType: vehicle,
+          deliveryCharge: delivery
+        }
+      })
+    });
+
+    const data = await res.json();
+    if(!data.success){
+      alert("❌ Order create failed");
+      return;
+    }
+
+    const rzp = new Razorpay({
+      key: data.key,
+      amount: data.amount,
+      currency: "INR",
+      order_id: data.order.id,
+
+      handler: function(){
+        alert("✅ Payment Successful 🎉");
+        closeAll();
+      },
+
+      modal:{
+        ondismiss:function(){
+          alert("❌ Payment cancelled");
+        }
+      }
+    });
+
+    rzp.open();
+
+  }catch(err){
+    console.error(err);
+    alert("❌ Payment error");
+  }
 }
-
 loadProducts();
 </script>
 </body>
