--- a/retailer.html
+++ b/retailer.html
@@ -269,7 +269,7 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
 const API = "https://shopbacked-vmhs.onrender.com";
 
 let selectedProduct = null;
-let cart = JSON.parse(localStorage.getItem("cart") || "[]");
+let cart = [];
 
 // DOM elements
 const dImages = document.getElementById("dImages");
