--- a/categoryProducts.html
+++ b/categoryProducts.html
@@ -79,7 +79,9 @@ body{margin:0;background:#f3f6fb}
     <button onclick="closeAll()" style="margin-top:10px">Close</button>
   </div>
 </div>
-
+<button class="cart-btn" onclick='addToCart(${JSON.stringify(p)})'>
+  🛒
+</button>
 <script>
 const API = "https://shopbacked-vmhs.onrender.com";
 
