--- a/retailer.html
+++ b/retailer.html
@@ -192,6 +192,55 @@ button.primary{background:#16a34a;color:#fff;border:none;padding:10px;border-rad
 .products-grid{
   gap:16px;
 }
+
+  /* ===== CART UI ===== */
+.cart-card{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  background:#fff;
+  padding:10px;
+  border-radius:12px;
+  box-shadow:0 3px 8px rgba(0,0,0,.08);
+  margin-bottom:10px;
+}
+
+.cart-img{
+  width:55px;
+  height:55px;
+  object-fit:cover;
+  border-radius:8px;
+  background:#f8fafc;
+}
+
+.cart-info{
+  flex:1;
+}
+
+.cart-name{
+  font-size:14px;
+  font-weight:600;
+}
+
+.cart-price{
+  font-size:13px;
+  color:#16a34a;
+}
+
+.cart-qty{
+  font-size:12px;
+  color:#555;
+}
+
+.cart-actions button{
+  background:#ef4444;
+  color:#fff;
+  border:none;
+  border-radius:8px;
+  padding:6px 8px;
+  font-size:12px;
+  cursor:pointer;
+}
 </style>
 </head>
 <body>
@@ -642,7 +691,23 @@ async function removeCart(i){
     openCart();
   }catch(e){ alert("Failed to remove item"); }
 }
+async function removeFromCart(productId){
+  const retailerId = localStorage.getItem("userId");
 
+  const res = await fetch(`${API}/api/cart/remove`,{
+    method:"DELETE",
+    headers:{ "Content-Type":"application/json" },
+    body: JSON.stringify({ retailerId, productId })
+  });
+
+  const data = await res.json();
+
+  if(data.success){
+    loadCart(); // 🔄 refresh
+  }else{
+    alert("❌ Failed to remove item");
+  }
+}
 function updateCartTotal(){
   const vehicle = cartVehicle.value;
   let subtotal = cart.reduce((s,i)=>s+i.price,0);
